--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,7 @@
+VITE_FIREBASE_API_KEY=AIzaSyBwrLtjzvEMdIpzWgiMcZw2zlNfx5NK0Dw
+VITE_FIREBASE_AUTH_DOMAIN=campusbuddy-f5592.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=campusbuddy-f5592
+VITE_FIREBASE_STORAGE_BUCKET=campusbuddy-f5592.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=190388904782
+VITE_FIREBASE_APP_ID=1:190388904782:web:12973172e6a356c966f41f
 VITE_API_URL=http://localhost:5000
