--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "description": "Campus Buddy frontend client",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
@@ -20,7 +20,7 @@
     "@tanstack/react-query": "^5.17.19",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
-    "date-fns": "^3.2.0",
+    "date-fns": "^4.1.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
