--- a/client/vercel.json
+++ b/client/vercel.json
@@ -17,12 +17,12 @@
     }
   ],
   "env": {
-    "VITE_FIREBASE_API_KEY": "@firebase-api-key",
-    "VITE_FIREBASE_AUTH_DOMAIN": "@firebase-auth-domain",
-    "VITE_FIREBASE_PROJECT_ID": "@firebase-project-id",
-    "VITE_FIREBASE_STORAGE_BUCKET": "@firebase-storage-bucket",
-    "VITE_FIREBASE_MESSAGING_SENDER_ID": "@firebase-messaging-sender-id",
-    "VITE_FIREBASE_APP_ID": "@firebase-app-id",
-    "VITE_API_URL": "@api-url"
+    "VITE_FIREBASE_API_KEY": "AIzaSyBwrLtjzvEMdIpzWgiMcZw2zlNfx5NK0Dw",
+    "VITE_FIREBASE_AUTH_DOMAIN": "campusbuddy-f5592.firebaseapp.com",
+    "VITE_FIREBASE_PROJECT_ID": "campusbuddy-f5592",
+    "VITE_FIREBASE_STORAGE_BUCKET": "campusbuddy-f5592.firebasestorage.app",
+    "VITE_FIREBASE_MESSAGING_SENDER_ID": "190388904782",
+    "VITE_FIREBASE_APP_ID": "1:190388904782:web:12973172e6a356c966f41f",
+    "VITE_API_URL": "https://campus-buddy123.vercel.app"
   }
 }
