--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
   "framework": "vite",
   "rewrites": [
     {
+      "source": "/api/health",
+      "destination": "/api/health.js"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/index.js"
     },
